Added missing translations

--- a/axelor-core/src/main/resources/i18n/fr.csv
+++ b/axelor-core/src/main/resources/i18n/fr.csv
@@ -1,8 +1,28 @@
 "domain","name","type","title","title_t","help","help_t"
+,,"menu","Administration","Administration",,
+,,"menu","User Management","Gestion des utilisateurs",,
+,,"menu","Groups","Les Groupes",,
+,,"menu","Permissions","Les Permissions",,
+,,"menu","Roles","Les Roles",,
+,,"menu","Users","Les Utilisateurs",,
+,,"menu","All Schedules","Les Planificateurs",,
+,,"menu","Job Management","Gestion des planificateurs",,
+,,"menu","All Models","Les Modèles",,
+,,"menu","All Modules","Les Modules",,
+,,"menu","Model Management","Gestion des modèles",,
+,,"menu","Module Management","Gestion des modules",,
+,,"menu","Action Menus","Les Action Menus",,
+,,"menu","All Actions","Les Actions",,
+,,"menu","All Views","Les Vues",,
+,,"menu","All Charts","Les Graphiques",,
+,,"menu","View Management","Gestion des vues",,
+,,"menu","All Menus","Les Menus",,
+,,"menu","All Selects","Les Selections",,
+,,"menu","All Translations","Les Traductions",,
 "com.axelor.auth.db.Group","code","field",,"Code",,
 "com.axelor.auth.db.Group","name","field",,"Nom",,
 "com.axelor.auth.db.Group","navigation","field",,"Navigation",,
-"com.axelor.auth.db.Group","technicalStaff","field",,"Données techniques","Specify whether the members of this group are technical staff.",
+"com.axelor.auth.db.Group","technicalStaff","field",,"Données techniques","Specify whether the members of this group are technical staff.","Indiquez si les membres de ce groupe sont des utilisateurs technique."
 "com.axelor.auth.db.Group","roles","field",,"Roles",,
 "com.axelor.auth.db.Group","permissions","field",,"Permissions",,
 "com.axelor.auth.db.Group","menus","field",,"Menus",,
@@ -50,17 +70,17 @@
 "com.axelor.meta.db.MetaSelect","priority","field",,"Priorité",,
 "com.axelor.meta.db.MetaSelect","module","field",,"Module",,
 "com.axelor.meta.db.MetaSelect","items","field",,"Elément",,
-"com.axelor.meta.db.MetaSelectItem","title","field",,"Libellé","The select item title.",
-"com.axelor.meta.db.MetaSelectItem","value","field",,"Valeur","The select item value.",
-"com.axelor.meta.db.MetaSelectItem","data","field",,"Données","The addition data for UI widgets.",
-"com.axelor.meta.db.MetaSelectItem","order","field",,"Séquence",,
+"com.axelor.meta.db.MetaSelectItem","title","field",,"Libellé","The select item title.","Label de la selection"
+"com.axelor.meta.db.MetaSelectItem","value","field",,"Valeur","The select item value.","Valeur de la selection"
+"com.axelor.meta.db.MetaSelectItem","data","field",,"Données","The addition data for UI widgets.","Données additionnelles utilisés par l'interface"
+"com.axelor.meta.db.MetaSelectItem","order","field",,"Ordre",,
 "com.axelor.meta.db.MetaSelectItem","select","field",,"Sélection",,
 "com.axelor.meta.db.MetaModel","name","field","Name","Nom",,
 "com.axelor.meta.db.MetaModel","packageName","field","Package","Package",,
 "com.axelor.meta.db.MetaModel","tableName","field","Table","Table",,
 "com.axelor.meta.db.MetaModel","metaFields","field","Fields","Champs",,
 "com.axelor.meta.db.MetaModel","fullName","field","Fullname","Nom complet",,
-"com.axelor.meta.db.MetaField","metaModel","field",,"Meta Model",,
+"com.axelor.meta.db.MetaField","metaModel","field",,"Modèle",,
 "com.axelor.meta.db.MetaField","name","field","Name","Nom",,
 "com.axelor.meta.db.MetaField","packageName","field","Package","Nom du package",,
 "com.axelor.meta.db.MetaField","typeName","field","Type","Type",,
@@ -82,7 +102,7 @@
 "com.axelor.meta.db.MetaFile","sizeText","field","Size","Taille",,
 "com.axelor.meta.db.MetaAttachment","objectName","field",,"Nom de l'objet",,
 "com.axelor.meta.db.MetaAttachment","objectId","field",,"ID de l'objet",,
-"com.axelor.meta.db.MetaAttachment","metaFile","field","File","Meta File",,
+"com.axelor.meta.db.MetaAttachment","metaFile","field","File","Fichier",,
 "com.axelor.meta.db.MetaFilter","name","field",,"Nom",,
 "com.axelor.meta.db.MetaFilter","title","field",,"Titre",,
 "com.axelor.meta.db.MetaFilter","filters","field",,"Filtres",,
@@ -106,16 +126,15 @@
 "com.axelor.meta.db.MetaSequence","increment","field",,"Increment",,
 "com.axelor.meta.db.MetaSequence","initial","field",,"Valeur origine",,
 "com.axelor.meta.db.MetaSequence","next","field",,"Valeur suivante",,
-"com.axelor.auth.db.Permission","name","field",,"Nom","An unique permission name.",
-"com.axelor.auth.db.Permission","object","field",,"Objet","Fully qualified object name or wild card package name.",
-"com.axelor.auth.db.Permission","deny","field",,"Refuser",,
-"com.axelor.auth.db.Permission","canRead","field","Read","Lecture","Whether to grant read access.",
-"com.axelor.auth.db.Permission","canWrite","field","Write","Modification","Whether to grant write access.",
-"com.axelor.auth.db.Permission","canCreate","field","Create","Création","Whether to grant create access.",
-"com.axelor.auth.db.Permission","canRemove","field","Remove","Suppression","Whether to grant remove access.",
-"com.axelor.auth.db.Permission","canExport","field","Export","Export","Whether to grant export access.",
-"com.axelor.auth.db.Permission","condition","field",,"Condition","Domain filter as condition.",
-"com.axelor.auth.db.Permission","conditionParams","field",,"Paramètres","Comma separated list of params for the condition.",
+"com.axelor.auth.db.Permission","name","field",,"Nom","An unique permission name.","Nom unique de la permission"
+"com.axelor.auth.db.Permission","object","field",,"Objet","Fully qualified object name or wild card package name.","Nom de l'objet"
+"com.axelor.auth.db.Permission","canRead","field","Read","Lecture","Whether to grant read access.","Autorise un accès en lecture"
+"com.axelor.auth.db.Permission","canWrite","field","Write","Modification","Whether to grant write access.","Autorise un accès en modification"
+"com.axelor.auth.db.Permission","canCreate","field","Create","Création","Whether to grant create access.","Autorise un accès en creation"
+"com.axelor.auth.db.Permission","canRemove","field","Remove","Suppression","Whether to grant remove access.","Autorise un accès en suppression"
+"com.axelor.auth.db.Permission","canExport","field","Export","Export","Whether to grant export access.","Autorise l'export"
+"com.axelor.auth.db.Permission","condition","field",,"Condition","Domain filter as condition.","Condition d'application des accès"
+"com.axelor.auth.db.Permission","conditionParams","field",,"Paramètres","Comma separated list of params for the condition.","Liste de paramètres séparée par des virgules"
 "com.axelor.auth.db.Role","name","field",,"Nom",,
 "com.axelor.auth.db.Role","description","field",,"Description",,
 "com.axelor.auth.db.Role","permissions","field",,"Permissions",,
@@ -126,8 +145,8 @@
 "com.axelor.auth.db.User","language","field",,"Langue",,
 "com.axelor.auth.db.User","action","field",,"Action",,
 "com.axelor.auth.db.User","blocked","field",,"Bloquer utilisateur ?","Specify whether to block the user for an indeterminate times.","Bloque l'utilisateur pour une période indéterminée."
-"com.axelor.auth.db.User","activateOn","field",,"Autoriser à partir de","Activate the user from the specified date.",
-"com.axelor.auth.db.User","expiresOn","field",,"Autoriser jusqu'au","Disable the user from the specified date.",
+"com.axelor.auth.db.User","activateOn","field",,"Autoriser à partir de","Activate the user from the specified date.","Active l'utilisateur à partir de la date spécifiée."
+"com.axelor.auth.db.User","expiresOn","field",,"Autoriser jusqu'au","Disable the user from the specified date.","Bloque l'utilisateur à partir de la date spécifiée."
 "com.axelor.auth.db.User","group","field",,"Groupe",,
 "com.axelor.auth.db.User","roles","field",,"Roles",,
 "com.axelor.auth.db.User","permissions","field",,"Permissions",,
@@ -259,6 +278,7 @@
 "com.axelor.meta.db.MetaTranslation",,"button","Import","Import",,
 "com.axelor.meta.db.MetaTranslation",,"button","All the customizations will be lost. Are you sure?","Tous les changements seront perdus. Voulez-vous continuer ?",,
 "com.axelor.meta.db.MetaTranslation",,"view","All Translations","Les Traductions",,
+"com.axelor.meta.db.MetaView",,"view","All Charts","Les Graphiques",,
 "com.axelor.meta.db.MetaView",,"view","View","Vue",,
 "com.axelor.meta.db.MetaView",,"group","View Details","Détails de la vue",,
 "com.axelor.meta.db.MetaView",,"group","Actions","Actions",,
@@ -290,6 +310,26 @@
 "com.axelor.auth.db.User",,"group","Preferences","Préférences",,
 "com.axelor.auth.db.User",,"view","Users","Utilisateurs",,
 "com.axelor.auth.db.User",,"view","Preferences","Préférences",,
+,,"action","Groups","Les Groupes",,
+,,"action","Permissions","Les Permissions",,
+,,"action","Roles","Les Roles",,
+,,"action","Users","Les Utilisateurs",,
+,,"action","Code length should be greater than 2.","La longueur de l'identifiant doit être supérieur à 2",,
+,,"action","Name length should be greater than 2.","La longueur du nom doit être supérieur à 2",,
+,,"action","Code length should be greater than 2.","La longueur de l'identifiant doit être supérieur à 2",,
+,,"action","Name length should be greater than 2.","La longueur du nom doit être supérieur à 2",,
+,,"action","Permissions","Les Permissions",,
+,,"action","Action Menus","Les Action Menus",,
+,,"action","Actions","Les Actions",,
+,,"action","Menus","Les Menus",,
+,,"action","Models","Les Modèles",,
+,,"action","Selects","Les Selections",,
+,,"action","Not implemented yet!","Pas encore implémenté!",,
+,,"action","All Translations","Les Traductions",,
+,,"action","Views","Les Vues",,
+,,"action","All Charts","Les Graphiques",,
+,,"action","All Schedules","Les Planificateurs",,
+,,"action","Modules","Les Modules",,
 ,,"other","All the customizations will be lost. Are you sure?","Tous les changements seront perdus. Voulez-vous continuer ?",,
 ,,"other","Duplicates found:","Doublons trouvés:",,
 ,,"other","Export done.","Export terminé.",,
@@ -311,6 +351,20 @@
 ,,"other","You are not authorized to read this resource.","Vous n'êtes pas autorisé à lire cette ressource.",,
 ,,"other","You are not authorized to remove this resource.","Vous n'êtes pas autorisé à supprimer cette ressource.",,
 ,,"other","You are not authorized to update this resource.","Vous n'êtes pas autorisé à modifier cette ressource.",,
+"action-auth-users","action-auth-users","documentation",,,,
+"action-auth-groups","action-auth-groups","documentation",,,,
+"action-auth-roles","action-auth-roles","documentation",,,,
+"action-auth-permissions","action-auth-permissions","documentation",,,,
+"action-meta-model-views","action-meta-model-views","documentation",,,,
+"action-meta-views","action-meta-views","documentation",,,,
+"action-meta-menus","action-meta-menus","documentation",,,,
+"action-meta-actions","action-meta-actions","documentation",,,,
+"action-meta-select","action-meta-select","documentation",,,,
+"action-meta-action-menus","action-meta-action-menus","documentation",,,,
+"action-meta-translations","action-meta-translations","documentation",,,,
+"meta.charts","meta.charts","documentation",,,,
+"meta.modules","meta.modules","documentation",,,,
+"meta.jobs","meta.jobs","documentation",,,,
 "user-form","user-form","documentation",,,,
 "user-form","name","documentation",,,,
 "user-form","group","documentation",,,,
@@ -318,7 +372,7 @@
 "user-form","change","documentation",,,,
 "user-form","newPassword","documentation",,,,
 "user-form","confirm","documentation",,,,
-"user-form","blocked","documentation",,,,"Bloque l'utilisateur pour une période indéterminée."
+"user-form","blocked","documentation",,,,
 "user-form","activateOn","documentation",,,,
 "user-form","expiresOn","documentation",,,,
 "user-form","email","documentation",,,,
@@ -407,7 +461,7 @@
 "meta-action-menu-form","name","documentation",,,,
 "meta-action-menu-form","title","documentation",,,,
 "meta-action-menu-form","parent","documentation",,,,
-"meta-action-menu-form","category","documentation",,,,"Nom de la catégorie pour grouper les actions menus"
+"meta-action-menu-form","category","documentation",,,,
 "meta-action-menu-form","action","documentation",,,,
 "meta-action-menu-form","module","documentation",,,,
 "meta-translations-form","meta-translations-form","documentation",,,,
