--- a/axelor-core/src/main/resources/i18n/messages.csv
+++ b/axelor-core/src/main/resources/i18n/messages.csv
@@ -163,6 +163,7 @@ resources/domains/Group.xml:14
 resources/domains/Meta.xml:92"
 "Navigation","","","resources/domains/Group.xml:15"
 "Next","","","resources/domains/MetaSequence.xml:18"
+"Not implemented yet!","","","resources/views/Meta.xml:205"
 "Object","","","resources/domains/Meta.xml:187
 resources/domains/Permission.xml:14"
 "Object name","","","resources/domains/Meta.xml:186"
