--- a/axelor-core/src/main/resources/i18n/messages_fr.csv
+++ b/axelor-core/src/main/resources/i18n/messages_fr.csv
@@ -34,6 +34,7 @@ resources/views/Menu.xml:112"
 "All Views","Les Vues","","resources/views/Menu.xml:68
 resources/views/Meta.xml:58"
 "All the customizations will be lost. Are you sure ?","Tous les changements seront perdus. Voulez-vous continuer ?","","resources/views/Meta.xml:60"
+"All views have been restored.","","","java/com/axelor/meta/web/MetaController.java:139"
 "Allow","Autorisations","","resources/views/Permission.xml:22"
 "An unique permission name.","Nom unique de la permission","","resources/domains/Permission.xml:13"
 "Authorization","Autorisation","","resources/views/User.xml:30"
@@ -70,8 +71,8 @@ resources/domains/Role.xml:14"
 "Expires on","Autoriser jusqu'au","","resources/domains/User.xml:23"
 "Export","Export","","resources/domains/Permission.xml:19
 resources/views/Meta.xml:254"
-"Export complete.","","","java/com/axelor/meta/schema/actions/ActionExport.java:146
-java/com/axelor/meta/web/MetaController.java:217
+"Export complete.","","","java/com/axelor/meta/web/MetaController.java:214
+java/com/axelor/meta/schema/actions/ActionExport.java:146
 java/com/axelor/meta/schema/actions/ActionExport.java:148"
 "Field","Champ","","resources/views/Meta.xml:236"
 "Field is required.","Champ requis.","","java/com/axelor/meta/schema/actions/ActionCondition.java:114"
