--- a/axelor-core/src/main/resources/i18n/messages.csv
+++ b/axelor-core/src/main/resources/i18n/messages.csv
@@ -1,8 +1,8 @@
 "key","message","comment","context"
 "Action","","","resources/domains/Meta.xml:64
 resources/views/User.xml:40
-resources/views/User.xml:51
 resources/views/Meta.xml:99
+resources/views/User.xml:51
 resources/domains/Meta.xml:82"
 "Action Menu","","","resources/views/Meta.xml:151"
 "Action Menus","","","resources/views/Menu.xml:105
@@ -22,8 +22,8 @@ resources/views/Menu.xml:123
 resources/views/Meta.xml:70"
 "All Menus","","","resources/views/Menu.xml:77"
 "All Models","","","resources/views/Menu.xml:59"
-"All Modules","","","resources/views/Meta.xml:31
-resources/views/Menu.xml:50"
+"All Modules","","","resources/views/Menu.xml:50
+resources/views/Meta.xml:31"
 "All Schedules","","","resources/views/Menu.xml:133
 resources/views/Menu.xml:131"
 "All Selects","","","resources/views/Meta.xml:160
@@ -152,10 +152,10 @@ resources/domains/Meta.xml:108"
 resources/domains/MetaSchedule.xml:20
 resources/domains/Meta.xml:56
 resources/domains/Meta.xml:133
-resources/domains/Meta.xml:106
 resources/domains/Meta.xml:77
-resources/domains/User.xml:14
+resources/domains/Meta.xml:106
 resources/domains/MetaSequence.xml:12
+resources/domains/User.xml:14
 resources/domains/Role.xml:13
 resources/domains/MetaFilter.xml:14
 resources/domains/Meta.xml:27
@@ -189,13 +189,13 @@ resources/views/User.xml:27"
 "Password doesn't match","","","java/com/axelor/auth/AuthService.java:223"
 "Permission","","","resources/views/Permission.xml:17"
 "Permissions","","","resources/views/Group.xml:58
+resources/domains/User.xml:27
+resources/views/Permission.xml:7
 resources/domains/Group.xml:20
 resources/views/Menu.xml:43
 resources/domains/Role.xml:15
 resources/views/Menu.xml:40
-resources/views/Group.xml:29
-resources/domains/User.xml:27
-resources/views/Permission.xml:7"
+resources/views/Group.xml:29"
 "Portal","","","resources/views/Meta.xml:12"
 "Preferences","","","resources/views/User.xml:47
 resources/views/User.xml:36"
@@ -240,8 +240,8 @@ resources/views/Meta.xml:167"
 "The select item value.","","","resources/domains/Meta.xml:122"
 "This may terminate any running jobs. Are sure to continue?","","","resources/views/Schedules.xml:23"
 "Title","","","resources/domains/Meta.xml:14
-resources/domains/Meta.xml:121
 resources/domains/MetaFilter.xml:15
+resources/domains/Meta.xml:121
 resources/domains/Meta.xml:78
 resources/domains/Meta.xml:57
 resources/domains/Meta.xml:28"
@@ -256,8 +256,8 @@ resources/domains/Meta.xml:29"
 resources/views/User.xml:19"
 "User Management","","","resources/views/Menu.xml:7"
 "Users","","","resources/views/Menu.xml:14
-resources/views/Menu.xml:16
-resources/views/User.xml:10"
+resources/views/User.xml:10
+resources/views/Menu.xml:16"
 "Validate","","","resources/views/Schedules.xml:22"
 "Value","","","resources/domains/Meta.xml:122
 resources/domains/MetaSchedule.xml:11"
@@ -280,6 +280,11 @@ resources/views/Menu.xml:70"
 resources/domains/Meta.xml:96
 resources/domains/Meta.xml:34
 resources/domains/Meta.xml:33"
+"You are not authorized to create this resource.","","","java/com/axelor/db/JpaSecurity.java:31"
+"You are not authorized to export the data.","","","java/com/axelor/db/JpaSecurity.java:33"
+"You are not authorized to read this resource.","","","java/com/axelor/db/JpaSecurity.java:29"
+"You are not authorized to remove this resource.","","","java/com/axelor/db/JpaSecurity.java:32"
+"You are not authorized to update this resource.","","","java/com/axelor/db/JpaSecurity.java:30"
 "action-attrs","","","resources/views/Meta.xml:18"
 "action-condition","","","resources/views/Meta.xml:22"
 "action-export","","","resources/views/Meta.xml:26"
